--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -19,7 +19,7 @@
             </div>
         </div>
     </div>
-    <!-- <div class="table-container">
+     <div class="table-container">
         <h2>ตารางคะแนนจิตอาสา</h2>
         <table>
             <thead>
@@ -45,7 +45,7 @@
                 </tr>
             </tbody>
         </table>
-    </div> -->
+    </div> 
 
 </body>
 
