--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -1,52 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-
-<body>
-    <div class="container">
-        <div class="header">
-            <img src="/public/assets/kmitl-logo.png" alt="KMITL Computer Engineering Logo" class="logo">
-            <div class="box">
-                <h1>ระบบฐานข้อมูลแต้มบุญ</h1>
-            </div>
-            <div>
-
-            </div>
-        </div>
+  </head>
+  <nav>
+    <div class="nav-left">
+        <p>หน้าหลัก</p>
     </div>
-     <div class="table-container">
-        <h2>ตารางคะแนนจิตอาสา</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>รหัสนักศึกษา</th>
-                    <th>ชื่อ-นามสกุล</th>
-                    <th>ชื่อเล่น</th>
-                    <th>รุ่น</th>
-                    <th>อีเมล</th>
-                    <th>เบอร์โทรศัพท์</th>
-                    <th>จำนวนแต้มบุญสะสม</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let row of tableData">
-                    <td>{{ row.studentId }}</td>
-                    <td>{{ row.fullName }}</td>
-                    <td>{{ row.nickName }}</td>
-                    <td>{{ row.generation }}</td>
-                    <td>{{ row.email }}</td>
-                    <td>{{ row.phoneNumber }}</td>
-                    <td>{{ row.points }}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div> 
+    <div class="nav-right">
+        <button>Logout</button>
+    </div>
+</nav>
 
-</body>
+  <body>
+      <div class="header">
+        <div class="image">
+        </div>
+        <div class="box">
+          <h1>ระบบฐานข้อมูลแต้มบุญ</h1>
+        </div>
+      </div>
 
+    <div class="table-container">
+      <h2>ตารางคะแนนจิตอาสา</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>รหัสนักศึกษา</th>
+            <th>ชื่อ-นามสกุล</th>
+            <th>ชื่อเล่น</th>
+            <th>รุ่น</th>
+            <th>อีเมล</th>
+            <th>เบอร์โทรศัพท์</th>
+            <th>จำนวนแต้มบุญสะสม</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- <tr *ngFor="let row of tableData">
+            <td>{{ row.studentId }}</td>
+            <td>{{ row.fullName }}</td>
+            <td>{{ row.nickName }}</td>
+            <td>{{ row.generation }}</td>
+            <td>{{ row.email }}</td>
+            <td>{{ row.phoneNumber }}</td>
+            <td>{{ row.points }}</td>
+          </tr> -->
+          <tr>
+            <td>wave</td>
+            <td>lnw</td>
+            <td>za</td>
+            <td>0</td>
+            <td>0</td>
+            <td>7</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>wavdwe</td>
+            <td>ldwanw</td>
+            <td>zdwaa</td>
+            <td>0dwa</td>
+            <td>0dwa</td>
+            <td>7dwa</td>
+            <td>2dwad</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </body>
 </html>
