--- a/src/app/data-table/data-table.component.css
+++ b/src/app/data-table/data-table.component.css
@@ -1,9 +1,29 @@
-.container {
-    width: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-  }
-  
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+nav{
+  background-color: #007bff;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav button{
+  background-color: #1A4782;
+  border: none;
+  padding: 10px;
+  border-radius: 2px;
+  transition: all 0.3 ease-in-out;
+  cursor: pointer;
+}
+
+nav button:hover{
+  background-color: #ddd;
+}
+
   .header {
     display: flex;
     align-items: center;
@@ -14,7 +34,6 @@
     height: 50px;
     margin-right: 80px;
     background-color: #ea0000;
-    
   }
   
   table {
@@ -33,7 +52,10 @@
   }
   
   tr:nth-child(even) {
-    background-color: #f9f9f9;
+    background-color: #DDEAFA;
+  }
+  tr:nth-child(odd) {
+    background-color: #ffffff;
   }
   
   .table-container {
@@ -44,13 +66,29 @@
   h1{
     color: #ffffff;
     align-items: center;
+    font-size: 64px;
   }
   .box {
-    width: 1040px;
+    width: 100%;
     height: 171px;
     background-color: #1A4782;
     padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
+
+
+
+  .image{
+    width: 30%;
+    background-image: url('../../assets/kmitl-logo.png');
+    background-size: cover;
+    object-fit: cover;
+    background-position: center;
+    height: 171px
+  }
+
   body {
     background-color: #EEEEEE;
   }
