Message แก้ให้loginใช้ได้

--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -38,7 +38,7 @@
           </tr>
         </thead>
         <tbody>
-          <!-- <tr *ngFor="let row of tableData">
+          <tr *ngFor="let row of tableData">
             <td>{{ row.studentId }}</td>
             <td>{{ row.fullName }}</td>
             <td>{{ row.nickName }}</td>
@@ -46,8 +46,8 @@
             <td>{{ row.email }}</td>
             <td>{{ row.phoneNumber }}</td>
             <td>{{ row.points }}</td>
-          </tr> -->
-          <tr>
+          </tr>
+          <!-- <tr>
             <td>wave</td>
             <td>lnw</td>
             <td>za</td>
@@ -64,9 +64,9 @@
             <td>0dwa</td>
             <td>7dwa</td>
             <td>2dwad</td>
-          </tr>
+          </tr> -->
         </tbody>
       </table>
     </div>
-  </body>
+</body>
 </html>
